Modifico texto en index

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -111,6 +111,7 @@
                     font-size: 4.5vw;
                 }
                 h4.cambio {
+                    padding: 0vh 2vw;
                     font-size: 2vw;
                 }
             }
