--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -187,6 +187,7 @@ section.cambio {
                 text-align: center;
             }
             h4.cambio {
+                padding: 0rem 2rem;
                 font-size: 2rem;
                 text-align: center;
             }
