--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -271,4 +271,15 @@
             width: 90%;
         }
     }
+
+
+    /* CLUBES */
+
+    div.logo-clubes {
+        width: 100%;
+        padding: 4vh 0vw;
+        img.clubes {
+            width: 10vw;
+        }
+    }
 }
