--- a/scss/_clubes.scss
+++ b/scss/_clubes.scss
@@ -1,5 +1,5 @@
 div.logo-clubes {
-    background-color: rgb(246, 246, 255);
+    background-image: linear-gradient(40deg, rgb(145, 142, 174) 10%, rgb(255, 255, 255)32%, rgba(255, 0, 0, 0.663)48%, rgb(200, 246, 255)66%, rgb(196, 83, 83)100%);
     display: flex;
     width: 100%;
     align-items: center;
