--- a/scss/main.css
+++ b/scss/main.css
@@ -73,7 +73,7 @@ header.header-index div.barra-superior div.barra-superior3 p.wpp-superior {
   color: white;
 }
 header.header-index div.header2 {
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   display: flex;
   flex-direction: row;
   padding: 2rem 0rem 2rem 0rem;
@@ -136,7 +136,6 @@ header.header-index div.header2 div.mi-compra p.carrito {
 header.header-index nav.nav {
   width: 100%;
   display: flex;
-  padding: 1rem 0rem 1rem 0rem;
   align-items: center;
   justify-content: center;
   background-color: white;
@@ -159,11 +158,12 @@ header.header-index nav.nav ul.nav li.nav {
   font-family: "Raleway", sans-serif;
   font-size: 1.8rem;
   color: black;
+  padding: 1rem 0rem 1rem 0rem;
 }
 header.header-index nav.nav ul.nav li.nav:hover {
+  transition: 0.5s;
   transform: scale(1.05);
-  transition: 1s;
-  color: rgb(108, 0, 0);
+  color: rgb(102, 0, 0);
 }
 
 img.img-carousel {
@@ -490,13 +490,11 @@ div.logo-clubes img.clubes {
     font-size: 1.5vw;
     margin: 0vw;
   }
-  header.header-index nav.nav {
-    padding: 1vh 0vw 1vh 0vw;
-  }
   header.header-index nav.nav ul.nav {
     width: 100%;
   }
   header.header-index nav.nav ul.nav li.nav {
+    padding: 1vh 0vw 1vh 0vw;
     font-size: 1.8vw;
   }
   img.img-carousel {
