Modifico logo, agrego productos y comento en js

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -41,7 +41,7 @@
         }
         div.header2 {
             padding: 2vh 0vw 2vh 0vw;
-            img.logo {
+            a img.logo {
                  width: 10vw;
             }
 
