--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -164,7 +164,7 @@ h3.lo-mas-vendido {
 }
 
 section.cambio {
-    padding: 10rem 0rem 10rem 0rem;
+    padding: 10rem 0rem 0rem 0rem;
     div.cambio0 {
         display: flex;
         div.cambio {
@@ -213,6 +213,38 @@ section.cambio {
         }
         h5.centrarnos {
             font-size: 1.8rem;
+        }
+    }
+}
+
+section.app-mockup {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+    margin: 13rem 0rem;
+    div.app {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 4rem;
+        h4.app {
+            text-align: center;
+            font-size: 3rem;
+        }
+        img.app {
+            text-align: center;
+            width: 15rem;
+            border-radius: 0.5rem;
+        }
+    }
+    div.mockup {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img.mockup {
+            width: 30rem;
         }
     }
 }
