--- a/scss/_hombre.scss
+++ b/scss/_hombre.scss
@@ -142,11 +142,11 @@ img.carrito {
 }
 
 nav.navCarrito {
-    background-color: rgba(0, 0, 0, 0);
+    background-color: white;
     div.divCarrito {
-        background-color: rgba(0, 0, 0, 0);
+        background-color: white;
         button.buttonCarrito {
-            border-color: rgba(255, 255, 255, 0);
+            border-color: white;
         }
     }
 }
