--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -316,6 +316,68 @@
         padding: 10vh 0vw 5vh 0vw;
         font-size: 3vw;
     }
+
+    section.productos {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        font-family: 'Raleway', sans-serif;
+        justify-content: center;
+        margin-bottom: 10vh;
+        gap: 10vw;
+        div.productos-1 {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            justify-content: center;
+            gap: 6vw;
+            div.productos {
+                width: 30vw;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                padding: 1vw;
+                box-shadow: 0vh 0vw 0.5vh 0.5vw rgba(0, 0, 0, 0.097);
+                &:hover {
+                    transform: scale(1.01);
+                    transition: 1s;
+                }
+                img.productos {
+                    display: flex;
+                    width: 100%;
+                }
+                h3.productos {
+                    display: flex;
+                    padding: 1vh 0vw 0vh 0vw;
+                    font-size: 1.8vw;
+                }
+                h4.productos {
+                    display: flex;
+                    padding: 2vh 0vw 0vh 0vw;
+                    margin: 0vw;
+                    font-size: 1.2vw;
+                }
+                button.btnProd {
+                    background-color: black;
+                    color: white;
+                    border-color: white;
+                    margin: 1vh 6vw;
+                    padding: 1vw;
+                    font-size: 1.5vw;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    &:hover {
+                        background-color: rgba(0, 0, 0, 0.071);
+                        color: black;
+                        transition: 1.2s;
+                    }
+                }
+            }
+        }
+    }
+
     section#sectionGlobal {
         display: flex;
         flex-direction: column;
