Modifico index y js

--- a/scss/_hombre.scss
+++ b/scss/_hombre.scss
@@ -142,11 +142,12 @@ img.carrito {
 }
 
 nav.navCarrito {
-    background-color: white;
+    background-color: rgb(239, 239, 239);
     div.divCarrito {
-        background-color: white;
+        background-color: rgb(239, 239, 239);
+
         button.buttonCarrito {
-            border-color: white;
+            border-color: rgb(239, 239, 239);
         }
     }
 }
