--- a/scss/_hombre.scss
+++ b/scss/_hombre.scss
@@ -134,7 +134,8 @@ div.divProdAgregados {
 
 #totalCompra {
     text-align: center;
-    font-size: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.7rem;
 }
 
 img.carrito {
@@ -142,13 +143,20 @@ img.carrito {
 }
 
 nav.navCarrito {
-    background-color: rgb(239, 239, 239);
+    background-color: rgb(242, 242, 255);
     div.divCarrito {
-        background-color: rgb(239, 239, 239);
-
+        background-color: rgb(242, 242, 255);
         button.buttonCarrito {
-            border-color: rgb(239, 239, 239);
+            border-color: rgb(242, 242, 255);
+            box-shadow: none;
         }
+    }
+}
+
+p.p-envio {
+    text-align: center;
+    em {
+        font-size: 1.5rem;
     }
 }
 
@@ -160,12 +168,11 @@ a.a-FinalizarCompra {
     justify-content: center;
     button#finalizarCompra {
         color: white;
-        background-color: rgb(89, 255, 95);
+        background-color: rgba(0, 255, 8, 0.588);
         display: flex;
         justify-content: center;
         align-items: center;
         border: none;
-        border-radius: 1rem;
         font-size: 2rem;
         margin: 2rem;
         padding: 1rem;
