--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -56,7 +56,7 @@ header.header-index {
         }
     }
     div.header2 {
-        background-color: black;
+        background-color: rgba(0, 7, 22, 0.812);
         display: flex;
         flex-direction: row;
         padding: 2rem 0rem 2rem 0rem;
@@ -78,9 +78,8 @@ header.header-index {
             font-size: 1.5rem;
             padding: 0.5rem 0rem 0.5rem 0rem;
             text-align: center;
-            font-family: 'Raleway', sans-serif;
-            color: white;
-            border-radius: 4rem;
+            color: black;
+            border-radius: 1.5rem;
             border: white solid;
         }
         div.inicio-sesion {
@@ -89,14 +88,24 @@ header.header-index {
             align-items: center;
             justify-content: center;
             gap: 1rem;
-            img.inicio-sesion {
-                width: 2.5rem;
-            }
-            p.inicio-sesion {
-                font-size: 1.5rem;
-                font-family: 'Raleway', sans-serif;
-                color: white;
-                margin: 0rem;
+            a {
+                width: auto;
+                display: flex;
+                img.inicio-sesion {
+                    width: 2.5rem;
+                }
+                p.inicio-sesion {
+                    font-size: 1.5rem;
+                    font-family: 'Raleway', sans-serif;
+                    color: white;
+                    margin: 0rem;
+                }
+                p.usuarioIndex {
+                    font-size: 1.5rem;
+                    font-family: 'Raleway', sans-serif;
+                    color: white;
+                    margin: 0rem;
+                }
             }
         }
     }
