--- a/scss/main.css
+++ b/scss/main.css
@@ -73,7 +73,7 @@ header.header-index div.barra-superior div.barra-superior3 p.wpp-superior {
   color: white;
 }
 header.header-index div.header2 {
-  background-color: black;
+  background-color: rgba(0, 7, 22, 0.812);
   display: flex;
   flex-direction: row;
   padding: 2rem 0rem 2rem 0rem;
@@ -96,9 +96,8 @@ header.header-index div.header2 input.header {
   font-size: 1.5rem;
   padding: 0.5rem 0rem 0.5rem 0rem;
   text-align: center;
-  font-family: "Raleway", sans-serif;
-  color: white;
-  border-radius: 4rem;
+  color: black;
+  border-radius: 1.5rem;
   border: white solid;
 }
 header.header-index div.header2 div.inicio-sesion {
@@ -108,10 +107,20 @@ header.header-index div.header2 div.inicio-sesion {
   justify-content: center;
   gap: 1rem;
 }
-header.header-index div.header2 div.inicio-sesion img.inicio-sesion {
+header.header-index div.header2 div.inicio-sesion a {
+  width: auto;
+  display: flex;
+}
+header.header-index div.header2 div.inicio-sesion a img.inicio-sesion {
   width: 2.5rem;
 }
-header.header-index div.header2 div.inicio-sesion p.inicio-sesion {
+header.header-index div.header2 div.inicio-sesion a p.inicio-sesion {
+  font-size: 1.5rem;
+  font-family: "Raleway", sans-serif;
+  color: white;
+  margin: 0rem;
+}
+header.header-index div.header2 div.inicio-sesion a p.usuarioIndex {
   font-size: 1.5rem;
   font-family: "Raleway", sans-serif;
   color: white;
@@ -546,7 +555,8 @@ div.divProdAgregados img.imgProdAgregados {
 
 #totalCompra {
   text-align: center;
-  font-size: 1.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.7rem;
 }
 
 img.carrito {
@@ -554,13 +564,21 @@ img.carrito {
 }
 
 nav.navCarrito {
-  background-color: rgb(239, 239, 239);
+  background-color: rgb(242, 242, 255);
 }
 nav.navCarrito div.divCarrito {
-  background-color: rgb(239, 239, 239);
+  background-color: rgb(242, 242, 255);
 }
 nav.navCarrito div.divCarrito button.buttonCarrito {
-  border-color: rgb(239, 239, 239);
+  border-color: rgb(242, 242, 255);
+  box-shadow: none;
+}
+
+p.p-envio {
+  text-align: center;
+}
+p.p-envio em {
+  font-size: 1.5rem;
 }
 
 a.a-FinalizarCompra {
@@ -572,12 +590,11 @@ a.a-FinalizarCompra {
 }
 a.a-FinalizarCompra button#finalizarCompra {
   color: white;
-  background-color: rgb(89, 255, 95);
+  background-color: rgba(0, 255, 8, 0.588);
   display: flex;
   justify-content: center;
   align-items: center;
   border: none;
-  border-radius: 1rem;
   font-size: 2rem;
   margin: 2rem;
   padding: 1rem;
@@ -630,24 +647,370 @@ div.logo-clubes img.clubes {
 
 h1.h1FinalizarCompra {
   text-align: center;
+  font-size: 5rem;
   margin: 5rem 0rem 0rem 0rem;
+}
+
+h4.form-h {
+  font-size: 3rem;
 }
 
 input.inputform {
   text-align: center;
+  font-size: 1.3rem;
   padding: 1rem 5rem;
-  border-radius: 0.5rem;
   border-color: rgba(0, 0, 0, 0.204);
+  box-shadow: inset 0 1px 4px hsla(0, 0%, 0%, 0.2);
+  border-radius: 5px;
+  font-family: Inconsolata;
 }
 
 button#terminoCompra {
-  background-color: rgba(13, 255, 0, 0.526);
+  background-color: rgb(0, 0, 0);
   color: white;
   display: block;
   padding: 1rem 3rem;
   margin: 3rem auto;
-  font-size: 1.5rem;
-  border: solid white;
+  font-size: 2rem;
+  border: none;
+}
+
+p.codigo-descuento {
+  text-align: center;
+  font-size: 2rem;
+}
+
+input#descuento {
+  text-align: center;
+  margin: 2rem auto;
+  display: flex;
+  justify-content: center;
+  font-size: 1.1rem;
+  padding: 1rem 5rem;
+  border-color: rgba(0, 0, 0, 0.204);
+  box-shadow: inset 0 1px 4px hsla(0, 0%, 0%, 0.2);
+  border-radius: 5px;
+  font-family: Inconsolata;
+}
+
+/*--------------------
+Formulario
+--------------------*/
+.form fieldset {
+  border: none;
+  padding: 0;
+  padding: 10px 0;
+  position: relative;
+  clear: both;
+}
+.form fieldset.fieldset-expiration {
+  float: left;
+  width: 60%;
+}
+.form fieldset.fieldset-expiration .select {
+  width: 84px;
+  margin-right: 12px;
+  float: left;
+}
+.form fieldset.fieldset-ccv {
+  clear: none;
+  float: right;
+  width: 86px;
+}
+.form fieldset label {
+  display: block;
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  color: hsla(0, 0%, 0%, 0.6);
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-family: Inconsolata;
+}
+.form fieldset input,
+.form fieldset .select {
+  width: 100%;
+  height: 38px;
+  color: hsl(0, 0%, 20%);
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 15px;
+  outline: none;
+  border: 1px solid hsla(0, 0%, 0%, 0.3);
+  box-shadow: inset 0 1px 4px hsla(0, 0%, 0%, 0.2);
+}
+.form fieldset input.input-cart-number,
+.form fieldset .select.input-cart-number {
+  width: 82px;
+  display: inline-block;
+  margin-right: 8px;
+}
+.form fieldset input.input-cart-number:last-child,
+.form fieldset .select.input-cart-number:last-child {
+  margin-right: 0;
+}
+.form fieldset .select {
+  position: relative;
+}
+.form fieldset .select::after {
+  content: "";
+  border-top: 8px solid #222;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  position: absolute;
+  z-index: 2;
+  top: 14px;
+  right: 10px;
+  pointer-events: none;
+}
+.form fieldset .select select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  position: absolute;
+  padding: 0;
+  border: none;
+  width: 100%;
+  outline: none !important;
+  top: 6px;
+  left: 6px;
+  background: none;
+}
+.form fieldset .select select :-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 #000;
+}
+
+/*--------------------
+Checkout
+--------------------*/
+.checkout {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 0px 45px;
+  gap: 20px;
+}
+
+/*--------------------
+Tarjeta de Crédito
+--------------------*/
+.credit-card-box {
+  perspective: 1000;
+  width: 100%;
+  height: 250px;
+  position: relative;
+  top: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.credit-card-box:hover .flip, .credit-card-box.hover .flip {
+  transform: rotateY(180deg);
+}
+.credit-card-box .front,
+.credit-card-box .back {
+  width: 100%;
+  height: 250px;
+  border-radius: 15px;
+  backface-visibility: hidden;
+  background-image: url(../img/fondo-tarjeta.svg);
+  background-size: auto 100%;
+  position: absolute;
+  color: #fff;
+  font-family: Inconsolata;
+  top: 0;
+  left: 0;
+  text-shadow: 0 1px 1px hsla(0, 0%, 0%, 0.3);
+  box-shadow: 0 1px 6px hsla(0, 0%, 0%, 0.3);
+}
+.credit-card-box .front::before,
+.credit-card-box .back::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  opacity: 0.05;
+}
+.credit-card-box .flip {
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+.credit-card-box .logo {
+  position: absolute;
+  top: 9px;
+  right: 20px;
+  width: 60px;
+}
+.credit-card-box .logo svg {
+  width: 100%;
+  height: auto;
+  fill: #fff;
+}
+.credit-card-box .front {
+  z-index: 2;
+  transform: rotateY(0deg);
+}
+.credit-card-box .back {
+  transform: rotateY(180deg);
+}
+.credit-card-box .back .logo {
+  top: 185px;
+}
+.credit-card-box .chip {
+  position: absolute;
+  width: 60px;
+  height: 45px;
+  top: 20px;
+  left: 20px;
+  background: linear-gradient(135deg, hsl(269, 54%, 87%) 0%, hsl(200, 64%, 89%) 44%, hsl(18, 55%, 94%) 100%);
+  border-radius: 8px;
+}
+.credit-card-box .chip::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border: 4px solid hsla(0, 0%, 50%, 0.1);
+  width: 80%;
+  height: 70%;
+  border-radius: 5px;
+}
+.credit-card-box .strip {
+  background: linear-gradient(135deg, hsl(0, 0%, 25%), hsl(0, 0%, 10%));
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  top: 30px;
+  left: 0;
+}
+.credit-card-box .number {
+  position: absolute;
+  margin: 0 auto;
+  top: 103px;
+  left: 19px;
+  font-size: 38px;
+}
+.credit-card-box label {
+  font-size: 10px;
+  letter-spacing: 1px;
+  text-shadow: none;
+  text-transform: uppercase;
+  font-weight: normal;
+  opacity: 0.5;
+  display: block;
+  margin-bottom: 3px;
+}
+.credit-card-box .card-holder,
+.credit-card-box .card-expiration-date {
+  position: absolute;
+  margin: 0 auto;
+  top: 180px;
+  left: 19px;
+  font-size: 22px;
+  text-transform: capitalize;
+}
+.credit-card-box .card-expiration-date {
+  text-align: right;
+  left: auto;
+  right: 20px;
+}
+.credit-card-box .ccv {
+  height: 36px;
+  background: #fff;
+  width: 91%;
+  border-radius: 5px;
+  top: 110px;
+  left: 0;
+  right: 0;
+  position: absolute;
+  margin: 0 auto;
+  color: #000;
+  text-align: right;
+  padding: 10px;
+}
+.credit-card-box .ccv label {
+  margin: -25px 0 14px;
+  color: #fff;
+}
+
+body.body-inicio-sesion {
+  background-image: url(../img/fondo-body.svg);
+  background-size: 100% auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+body.body-inicio-sesion div.div-inicio-sesion {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+}
+body.body-inicio-sesion div.div-inicio-sesion div.div-logo-inicio-sesion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+body.body-inicio-sesion div.div-inicio-sesion div.div-logo-inicio-sesion img.logo-inicio-sesion {
+  width: 20rem;
+}
+body.body-inicio-sesion div.div-inicio-sesion div#inicio-sesion {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+body.body-inicio-sesion div.div-inicio-sesion div#inicio-sesion p.pOne {
+  width: 100%;
+  text-align: center;
+  font-size: 2rem;
+  color: white;
+}
+body.body-inicio-sesion div.div-inicio-sesion div#inicio-sesion input.inputOne {
+  width: 100%;
+  text-align: center;
+  padding: 1rem 2rem;
+}
+body.body-inicio-sesion div.div-inicio-sesion div#inicio-sesion p.pTwo {
+  width: 100%;
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 2rem;
+  color: white;
+}
+body.body-inicio-sesion div.div-inicio-sesion div#inicio-sesion input.inputTwo {
+  width: 100%;
+  text-align: center;
+  padding: 1rem 2rem;
+}
+body.body-inicio-sesion div.div-inicio-sesion div#inicio-sesion button.button-inicio-sesion {
+  color: rgb(52, 52, 52);
+  background-color: rgb(255, 236, 94);
+  border-radius: 0.6rem;
+  font-size: 2rem;
+  padding: 1rem;
+  margin-top: 3rem;
+  border: none;
+}
+body.body-inicio-sesion div.div-inicio-sesion div#inicio-sesion button.button-inicio-sesion:hover {
+  transition: 2s;
+  background-color: rgb(221, 195, 0);
 }
 
 /* MOBILE */
@@ -700,16 +1063,13 @@ button#terminoCompra {
     border-radius: 4vw;
   }
   header.header-index div.header2 div.inicio-sesion {
-    width: 70%;
     gap: 1vw;
-    justify-content: end;
   }
-  header.header-index div.header2 div.inicio-sesion img.inicio-sesion {
+  header.header-index div.header2 div.inicio-sesion a img.inicio-sesion {
     width: 2.5vw;
   }
-  header.header-index div.header2 div.inicio-sesion p.inicio-sesion {
+  header.header-index div.header2 div.inicio-sesion a p.inicio-sesion {
     font-size: 1.5vw;
-    margin: 0vw;
   }
   header.header-index div.header2 div.mi-compra {
     width: 50%;
@@ -1051,5 +1411,9 @@ button#terminoCompra {
   }
   div.logo-clubes img.clubes {
     width: 10vw;
+  }
+  /* FINALIZAR COMPRA */
+  section#sectionForm {
+    flex-direction: column;
   }
 }/*# sourceMappingURL=main.css.map */
