--- a/scss/_finalizarcompra.scss
+++ b/scss/_finalizarcompra.scss
@@ -18,33 +18,41 @@ input.inputform {
   font-family: Inconsolata;
 }
 
-
-button#terminoCompra {
-  background-color: rgb(0, 0, 0);
-  color: white;
-  display: block;
-  padding: 1rem 3rem;
-  margin: 3rem auto;
-  font-size: 2rem;
-  border: none;
-}
-
-p.codigo-descuento {
-  text-align: center;
-  font-size: 2rem;
-}
-
-input#descuento {
-  text-align: center;
-  margin: 2rem auto;
-  display: flex;
-  justify-content: center;
-  font-size: 1.1rem;
-  padding: 1rem 5rem;
-  border-color: rgba(0, 0, 0, 0.204);
-  box-shadow: inset 0 1px 4px hsla(0, 0, 0, 0.2);
-  border-radius: 5px;
-  font-family: Inconsolata;
+section.finalizar-compra-bg {
+  background-color: #f6f6f6;
+  padding: 2rem 0rem;
+  margin: 2rem 0rem 0rem 0rem;
+  input#descuento {
+    text-align: center;
+    margin: 2rem auto;
+    display: flex;
+    justify-content: center;
+    font-size: 1.1rem;
+    padding: 1rem 5rem;
+    border-color: rgba(0, 0, 0, 0.204);
+    box-shadow: inset 0 1px 4px hsla(0, 0, 0, 0.2);
+    border-radius: 5px;
+    font-family: Inconsolata;
+  }
+  p.codigo-descuento {
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.7rem;
+  }
+  button#terminoCompra {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    display: block;
+    padding: 1rem 3rem;
+    margin: 1rem auto auto auto;
+    font-size: 2rem;
+    border: none;
+    &:hover {
+      transform: 1.05;
+      transition: 2s;
+      background-color: rgb(95, 255, 95);
+    }
+  }
 }
 
 
